fix: reduce mobile slider size and stabilize layout to prevent jumping

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -188,15 +188,16 @@ div[class*="dikidi-"][class$="-modal"] div[class*="dikidi-"][class$="-dialog"] {
 .brutal-slider::-webkit-slider-thumb {
   -webkit-appearance: none;
   appearance: none;
-  width: 32px;
-  height: 48px;
+  width: 21px;
+  /* Reduced from 32px by 35% */
+  height: 31px;
+  /* Reduced from 48px by 35% */
   background: #000;
-  border: 4px solid #fff;
+  border: 3px solid #fff;
   cursor: pointer;
-  box-shadow: 4px 4px 0px 0px rgba(0, 0, 0, 0.5);
+  box-shadow: 3px 3px 0px 0px rgba(0, 0, 0, 0.5);
   border-radius: 0;
   margin-top: 0;
-  /* Clear any default margin */
 }
 
 @media (min-width: 768px) {
@@ -207,12 +208,14 @@ div[class*="dikidi-"][class$="-modal"] div[class*="dikidi-"][class$="-dialog"] {
 }
 
 .brutal-slider::-moz-range-thumb {
-  width: 32px;
-  height: 48px;
+  width: 21px;
+  /* Reduced from 32px by 35% */
+  height: 31px;
+  /* Reduced from 48px by 35% */
   background: #000;
-  border: 4px solid #fff;
+  border: 3px solid #fff;
   cursor: pointer;
-  box-shadow: 4px 4px 0px 0px rgba(0, 0, 0, 0.5);
+  box-shadow: 3px 3px 0px 0px rgba(0, 0, 0, 0.5);
   border-radius: 0;
 }
 
